# healpixviewer

./: .gitmodules  CMakeLists.txt  README.md  bayestar.fits.gz.json  cmb.fits.json  cmb.json  earth-2048.fits.json  skymap.fits.json  skymap2.fits.json  viewer.cpp
